fix compilation on Java 8